[package]
name = "serde-json-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6.0"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "213489e171b305" }
toml = "0.7.4"

